--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="assets/favicon.png" type="image/png">
     <title>Alivio</title>
@@ -42,8 +45,8 @@
             </div>
         </div>
     </header>
-    
- <main>
+
+    <main>
         <section class="hero" aria-label="hero section" id="hero-id">
             <div class="container">
                 <div class="hero__content">
@@ -67,24 +70,48 @@
                 <div class="about__cards">
                     <figure class="card" aria-label="first card">
                         <h3 class="card__title">Personalize</h3>
-                        <p class="card__desc" aria-label="first card description">Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p>
+                        <p class="card__desc" aria-label="first card description">Answer a quick survey about how you
+                            express yourself, what causes you stress, and what area would you like to work on. This way,
+                            we can fully personalize your journal!</p>
                         <img src="assets/webp/card_1.webp" alt="card image 1" class="card__img">
                     </figure>
 
                     <figure class="card" aria-label="second card">
                         <h3 class="card__title card__title--second card__title--right">Write & Understand</h3>
-                        <p class="card__desc" aria-label="second card description">Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!</p>
+                        <p class="card__desc" aria-label="second card description">Write, draw, reflect, understand.
+                            Alivio will guide you through the prompts and will help you manage your stress!</p>
                         <img src="assets/webp/card_2.webp" alt="card image 2" class="card__img">
                     </figure>
 
                     <figure class="card" aria-label="third card">
                         <h3 class="card__title card__title--third">Alivio!</h3>
-                        <p class="card__desc" aria-label="third card description">Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!</p>
+                        <p class="card__desc" aria-label="third card description">Now you are aware, and have a way to
+                            manage and overcome your own stress. What are you waiting for? Alivio today!</p>
                         <img src="assets/webp/card_3.webp" alt="card image 3" class="card__img">
                     </figure>
+                </div>
+        </section>
+
+
+        <section class="success" aria-label="success section" id="success-id">
+            <div class="container">
+                <div class="success__wrapper">
+                    <div class="success__content">
+                        <h3 class="success__title">Let's hear about Kayla's success story</h3>
+                        <p class="success__description">See how well Alivio works in a real customer’s life.</p>
+                        <button class="btn">Let's get started</button>
+                    </div>
+
+                    <div class="success__content-video">
+                        <img src="assets/webp/video_cover.webp" class="success__cover" alt="video cover img">
+                        <svg class="success__play-icon" aria-label="play icon">
+                            <use href="assets/sprites.svg#play-icon"></use>
+                        </svg>
+                        <div class="success__gradient"></div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
 </body>
 </html>
-
